--- a/.aigne/web-smith/history.yaml
+++ b/.aigne/web-smith/history.yaml
@@ -1,4 +1,20 @@
 entries:
+  - timestamp: 2025-10-16T14:09:47.661Z
+    operation: page_update
+    feedback: "change section1 title to: Create great docs without writing them , and change section1
+      desc to: Generate, translate, and publish production-ready documentation straight from your
+      codebase—kept in sync with every release."
+    page: /home
+  - timestamp: 2025-10-16T14:07:21.934Z
+    operation: page_update
+    feedback: |-
+      Please help to tune description in all sections to make them shorter by removing
+            redundancy or overly wordy phrasing without changing the meaning
+    page: /home
+  - timestamp: 2025-10-16T14:05:55.440Z
+    operation: page_update
+    feedback: Add a changelog section after section 4
+    page: /home
   - timestamp: 2025-10-16T13:57:25.837Z
     operation: page_update
     feedback: 在最后增加一个section：Ready to Automate Your Documentation?
