--- a/.aigne/web-smith/pages/workspace/en/home.yaml
+++ b/.aigne/web-smith/pages/workspace/en/home.yaml
@@ -4,9 +4,9 @@
   "image": "mediakit://aigne-docsmith-hero.png"
 "sections":
   - "sectionName": "hero"
-    "sectionSummary": "Introduces AIGNE DocSmith with a powerful, benefit-driven headline, a concise explanation of its value, and clear calls-to-action to get started or view the project on GitHub, all set against an immersive background image."
-    "fullBackgroundHeroCenteredTitle": "Documentation that Writes Itself"
-    "fullBackgroundHeroCenteredDescription": "Stop writing docs and start shipping. AIGNE DocSmith uses AI to analyze your code and generate comprehensive, multi-language documentation automatically. Keep your docs perfectly in sync, effortlessly."
+    "sectionSummary": "Introduces AIGNE DocSmith with a powerful headline, concise value proposition, and clear CTAs against an immersive background."
+    "fullBackgroundHeroCenteredTitle": "Create great docs without writing them"
+    "fullBackgroundHeroCenteredDescription": "Generate, translate, and publish production-ready documentation straight from your codebase—kept in sync with every release."
     "fullBackgroundHeroActions":
       - "text": "Get Started Now"
         "link": "https://docsmith.aigne.io/docs/docsmith"
@@ -14,101 +14,119 @@
         "link": "https://github.com/AIGNE-io/aigne-doc-smith"
     "fullBackgroundHeroImage": "mediakit://hero-background.webp"
   - "sectionName": "howItWorks"
-    "sectionSummary": "Visually demonstrates the core workflow of AIGNE DocSmith using a series of animated terminal players. This 'show, don't tell' approach builds credibility and clearly communicates the tool's ease of use and power."
+    "sectionSummary": "Visually demonstrates DocSmith's core workflow with animated terminal players, building credibility by showing the tool's power and ease of use."
     "oneColumnGridTitle": "See DocSmith in Action"
     "list":
       - "sectionName": "generateDemo"
-        "sectionSummary": "Shows the 'generate' command in action, highlighting the initial, zero-config documentation creation process."
+        "sectionSummary": "Shows the 'generate' command, highlighting the zero-config documentation creation process."
         "terminalLeft":
           "title": "1. Generate Your Docs"
-          "description": "Run a single command. DocSmith analyzes your project, plans a logical structure, and generates comprehensive documentation from scratch. Zero config required."
+          "description": "Run one command. DocSmith analyzes your project, plans the structure, and generates comprehensive docs from scratch. No config needed."
           "actionTitle": ""
           "actionLink": ""
         "terminalPlaybackData": "mediakit://generate.json"
       - "sectionName": "updateDemo"
-        "sectionSummary": "Demonstrates the 'update' command, emphasizing how DocSmith intelligently keeps documentation synchronized with code changes."
+        "sectionSummary": "Demonstrates the 'update' command, showing how DocSmith keeps docs synced with code changes."
         "terminalRight":
           "title": "2. Keep Them in Sync"
-          "description": "Code changes? No problem. DocSmith detects updates and intelligently regenerates only the affected sections, ensuring your docs are always accurate."
+          "description": "Code changes? DocSmith detects updates and regenerates only affected sections, keeping your docs accurate."
           "actionTitle": ""
           "actionLink": ""
         "terminalPlaybackData": "mediakit://update.json"
       - "sectionName": "translateDemo"
-        "sectionSummary": "Illustrates the 'translate' command, showcasing the seamless multi-language translation capabilities."
+        "sectionSummary": "Illustrates the 'translate' command, showcasing seamless multi-language translation."
         "terminalLeft":
           "title": "3. Go Global Instantly"
-          "description": "Reach a worldwide audience. Translate your documentation into 12 professionally supported languages with a single command, maintaining technical accuracy."
+          "description": "Go global. Translate your docs into 12 professionally supported languages with one command, ensuring technical accuracy."
           "actionTitle": ""
           "actionLink": ""
         "terminalPlaybackData": "mediakit://translate.json"
       - "sectionName": "publishDemo"
-        "sectionSummary": "Highlights the 'publish' command, showing users how easy it is to make their documentation live and accessible."
+        "sectionSummary": "Highlights the 'publish' command, showing how easy it is to make documentation live."
         "terminalRight":
           "title": "4. Publish with One Click"
-          "description": "Make your docs live! Publish directly to the DocSmith platform or your own Discuss Kit instance and share with your team or the world."
+          "description": "Go live! Publish directly to the DocSmith platform or your Discuss Kit instance to share with your team or the world."
           "actionTitle": ""
           "actionLink": ""
         "terminalPlaybackData": "mediakit://publish.json"
   - "sectionName": "features"
-    "sectionSummary": "Presents the key features of DocSmith in a scannable 3-column grid. Each feature is paired with an icon and a benefit-oriented description to quickly communicate the product's value."
+    "sectionSummary": "Presents key DocSmith features in a scannable 3-column grid, each with an icon and benefit-oriented description to quickly show value."
     "threeColumnGridTitle": "Powerful Features, Effortless Experience"
     "list":
       - "sectionName": "intelligentGeneration"
-        "sectionSummary": "Feature highlight for AI-powered intelligent content generation."
+        "sectionSummary": "Highlights AI-powered intelligent content generation."
         "iconName": "lucide:brain-circuit"
         "cardTitle": "Intelligent Generation"
-        "cardDescription": "Our AI understands code intent, generating not just what your code does, but why. Get logical structure and context-rich content automatically."
+        "cardDescription": "Our AI understands code intent to generate context-rich content that explains the 'why,' not just the 'what.' Get a logical structure automatically."
       - "sectionName": "multiLanguageSupport"
-        "sectionSummary": "Feature highlight for multi-language translation capabilities."
+        "sectionSummary": "Highlights multi-language translation capabilities."
         "iconName": "lucide:languages"
         "cardTitle": "Global Ready"
-        "cardDescription": "Translate your docs into 12 languages. Our context-aware AI ensures professional-grade, technically accurate translations."
+        "cardDescription": "Translate docs into 12 languages. Our context-aware AI ensures professional, technically accurate translations."
       - "sectionName": "llmIntegration"
-        "sectionSummary": "Feature highlight for flexible Large Language Model integration."
+        "sectionSummary": "Highlights flexible Large Language Model integration."
         "iconName": "lucide:cubes"
         "cardTitle": "Flexible LLM Support"
-        "cardDescription": "Use AIGNE Hub out-of-the-box or bring your own keys for OpenAI, Google, Anthropic, and more. You're in control."
+        "cardDescription": "Use AIGNE Hub instantly or bring your own keys for OpenAI, Google, Anthropic, and more. You're in control."
       - "sectionName": "smartUpdates"
-        "sectionSummary": "Feature highlight for the automatic documentation update functionality."
+        "sectionSummary": "Highlights the automatic documentation update feature."
         "iconName": "lucide:refresh-cw"
         "cardTitle": "Always Up-to-Date"
-        "cardDescription": "DocSmith automatically detects code changes and updates only the relevant documentation, saving time and ensuring accuracy."
+        "cardDescription": "DocSmith auto-detects code changes and updates only relevant docs, saving time and ensuring accuracy."
       - "sectionName": "zeroConfig"
-        "sectionSummary": "Feature highlight for the easy, zero-configuration setup process."
+        "sectionSummary": "Highlights the easy, zero-configuration setup."
         "iconName": "lucide:zap"
         "cardTitle": "Zero Configuration"
-        "cardDescription": "Get started in seconds. DocSmith auto-detects your project's tech stack and smart defaults get you running instantly."
+        "cardDescription": "Get started in seconds. DocSmith auto-detects your tech stack with smart defaults to get you running instantly."
       - "sectionName": "oneClickPublishing"
-        "sectionSummary": "Feature highlight for the simple, one-click publishing workflow."
+        "sectionSummary": "Highlights the simple, one-click publishing workflow."
         "iconName": "lucide:rocket"
         "cardTitle": "One-Click Publishing"
-        "cardDescription": "Publish your docs to DocSmith Cloud or your own Discuss Kit instance with a single command. Sharing has never been easier."
+        "cardDescription": "Publish docs to DocSmith Cloud or your Discuss Kit instance with one command. Sharing has never been easier."
   - "sectionName": "quickStart"
-    "sectionSummary": "Provides a simple, two-step guide to get users started quickly. Each step is presented in a clear card with a title, description, and the exact code snippet to run."
+    "sectionSummary": "Provides a simple two-step guide to get started. Each step is a clear card with a title, description, and code snippet."
     "oneColumnGridTitle": "Get Started in 60 Seconds"
     "list":
       - "sectionName": "installCliCard"
-        "sectionSummary": "The first step in the quick start guide: installing the AIGNE CLI, presented in a content card with a code block."
+        "sectionSummary": "First step of the quick start guide: installing the AIGNE CLI, shown in a card with a code block."
         "contentCardTitle": "Step 1: Install the AIGNE CLI"
-        "contentCardDescription": "Get the power of DocSmith on your machine with a single global install command via npm."
+        "contentCardDescription": "Get DocSmith on your machine with one global npm install command."
         "contentCardBottomCode":
           "name": "bash"
           "content": "npm install -g @aigne/cli"
       - "sectionName": "generateDocsCard"
-        "sectionSummary": "The second step in the quick start guide: running the generate command, presented in a content card with a code block."
+        "sectionSummary": "Second step of the quick start guide: running the generate command, shown in a card with a code block."
         "contentCardTitle": "Step 2: Generate Your First Doc"
-        "contentCardDescription": "Navigate to your project's root directory and run the generate command. DocSmith handles the rest, from analysis to content creation."
+        "contentCardDescription": "Go to your project's root directory and run the generate command. DocSmith handles the rest, from analysis to creation."
         "contentCardBottomCode":
           "name": "bash"
           "content": "cd /path/to/your/project
 
+
             aigne doc generate"
+  - "sectionName": "changelog"
+    "sectionSummary": "Displays the latest updates for AIGNE DocSmith in a scannable format, with a link to the full changelog."
+    "changelogTitle": "Latest Updates"
+    "changelogList":
+      - "date": "2025-10-12"
+        "description": "Feature: Context retrieval from repositories is now supported via AFS."
+      - "date": "2025-10-11"
+        "description": "Fix: Improved access token retrieval and session checking for publishing."
+      - "date": "2025-10-11"
+        "description": "Fix: Addressed an issue with missing locale information during document checks."
+      - "date": "2025-10-11"
+        "description": "Feature: Optimized for large context handling in document generation."
+    "changelogAction":
+      "text": "View Full Changelog"
+      "link": "https://github.com/AIGNE-io/aigne-doc-smith/blob/main/CHANGELOG.md"
   - "sectionName": "finalCta"
-    "sectionSummary": "A final, compelling call-to-action that encourages users to get started with DocSmith, reinforcing the primary conversion goal."
+    "sectionSummary": "A final, compelling call-to-action encouraging users to get started with DocSmith."
     "ctaTitle": "Ready to Automate Your Documentation?"
-    "ctaDescription": "Stop the manual grind and let AIGNE DocSmith build brilliant, always-current docs for you. Get started now and reclaim your time to code!"
+    "ctaDescription": "Stop the manual grind. Let AIGNE DocSmith build brilliant, always-current docs for you. Get started now and reclaim your time to code!"
     "cta":
       - "text": "Try It Now"
         "link": "https://docsmith.aigne.io/docs/docsmith"
       - "text": "See it on GitHub"
         "link": "https://github.com/AIGNE-io/aigne-doc-smith"
+"title": "AIGNE DocSmith | AI-Powered Code Documentation"
+"description": "Automatically generate comprehensive, multi-language documentation from your codebase with AIGNE DocSmith. Our AI understands your code to create accurate, up-to-date docs, saving you time."
