--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "debug": "^4.4.1",
     "diff": "^8.0.2",
     "dompurify": "^3.2.6",
+    "file-type": "^21.0.0",
     "fs-extra": "^11.3.1",
     "glob": "^11.0.3",
     "gpt-tokenizer": "^3.2.0",
@@ -64,7 +65,6 @@
     "remark-gfm": "^4.0.1",
     "remark-lint": "^10.0.1",
     "remark-parse": "^11.0.0",
-    "slugify": "^1.6.6",
     "terminal-link": "^4.0.0",
     "ufo": "^1.6.1",
     "unified": "^11.0.5",
